Runtime: Don't append local discriminators to locally defined type names.

If a type was defined locally, a printed representation of an instance of that
type would contain a local discriminator. Introducing an additional demangling
option allows to opt out of this behaviour.

Resolves: SR-6787.