test/stdlib/StringDescribing.swift
@@ -22,4 +22,19 @@ StringDescribingTestSuite.test("String(reflecting:) should include extra stuff i
   expectEqual(privateName.suffix(5), ").Foo")
 }
 
+StringDescribingTestSuite.test("String(describing:) shouldn't include local discriminator") {
+  class LocalType {}
+  let t = LocalType()
+  expectEqual(String(describing: type(of: t)), "LocalType")
+}
+
+StringDescribingTestSuite.test("String(reflecting:) should uniquely qualify type name") {
+  class LocalType {}
+  let t = LocalType()
+  let representation = String(reflecting: type(of: t))
+
+  expectEqual(representation.prefix(6), "main.(")
+  expectEqual(representation.suffix(11), ").LocalType")
+}
+
 runAllTests()
